Kafka topology working with custom metrics